--- a/app/views/favoritenets/_favorite_button.html.erb
+++ b/app/views/favoritenets/_favorite_button.html.erb
@@ -1,13 +1,11 @@
-<% unless current_user == user %>
-  <% if current_user.favorite_micropost?(user) %>
-    <%= form_for(current_user.favoritenets.find_by(micropost_id: user.id), html: { method: :delete }) do |f| %>
+<% if current_user.favorite_micropost?(micropost) %>
+    <%= form_for(current_user.favoritenets.find_by(micropost_id: micropost.id), html: { method: :delete }) do |f| %>
       <%= hidden_field_tag :micropost_id, micropost.id %>
-      <%= f.submit 'Unfavorite', class: 'btn btn-danger btn-block' %>
+      <%= f.submit 'Unfavorite', class: 'btn btn-danger btn-xs' %>
     <% end %>
   <% else %>
     <%= form_for(current_user.favoritenets.build) do |f| %>
       <%= hidden_field_tag :micropost_id, micropost.id %>
-      <%= f.submit 'Favorite', class: 'btn btn-primary btn-block' %>
+      <%= f.submit 'Favorite', class: 'btn btn-primary btn-xs' %>
     <% end %>
-  <% end %>
 <% end %>
