--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -24,6 +24,7 @@
  <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><%= link_to 'My profile', user_path(current_user) %></li>
+                <li><%= link_to 'Favorite', favorite_microposts_user_path(current_user) %></li>
                 <li role="separator" class="divider"></li>
                 <li><%= link_to 'Logout', logout_path, method: :delete %></li>
               </ul>
